--- a/internal/glance/templates/search.html
+++ b/internal/glance/templates/search.html
@@ -3,7 +3,7 @@
 {{ define "widget-content-classes" }}widget-content-frameless{{ end }}
 
 {{ define "widget-content" }}
-<div class="search widget-content-frame padding-inline-widget flex gap-15 items-center" data-default-search-url="{{ .SearchEngine }}" data-new-tab="{{ .NewTab }}" data-target="{{ .Target }}"{{ if .Suggestions }} data-suggestions-enabled="true" data-suggestion-engine="{{ .SuggestionEngine }}"{{ end }}>
+<div class="search widget-content-frame padding-inline-widget flex gap-15 items-center" data-default-search-url="{{ .SearchEngine }}" data-new-tab="{{ .NewTab }}" data-target="{{ .Target }}"{{ if .Suggestions }} data-suggestions-enabled="true" data-widget-id="{{ .GetID }}"{{ end }}>
     <div class="search-bangs">
         {{ range .Bangs }}
         <input type="hidden" data-shortcut="{{ .Shortcut }}" data-title="{{ .Title }}" data-url="{{ .URL }}">
