--- a/internal/glance/templates/rss-detailed-list.html
+++ b/internal/glance/templates/rss-detailed-list.html
@@ -17,9 +17,14 @@
             <a class="size-h3 color-primary-if-not-visited" href="{{ .Link }}" target="_blank" rel="noreferrer">{{ .Title }}</a>
             <ul class="list-horizontal-text flex-nowrap">
                 <li {{ dynamicRelativeTimeAttrs .PublishedAt }}></li>
+                {{ if not .HideLinkHost }}
+                <li class="min-width-0">{{ .LinkHost }}</li>
+                {{ end }}
+                {{ if not .HideChannelName }}
                 <li class="min-width-0">
                     <a class="block text-truncate" href="{{ .ChannelURL }}" target="_blank" rel="noreferrer">{{ .ChannelName }}</a>
                 </li>
+                {{ end }}
             </ul>
             {{ if ne "" .Description }}
             <p class="rss-detailed-description text-truncate-2-lines margin-top-10">{{ .Description }}</p>
