--- a/internal/glance/templates/rss-horizontal-cards.html
+++ b/internal/glance/templates/rss-horizontal-cards.html
@@ -19,7 +19,13 @@
                 <a href="{{ .Link }}" class="text-truncate-3-lines color-primary-if-not-visited margin-top-10 margin-bottom-auto" target="_blank" rel="noreferrer">{{ .Title }}</a>
                 <ul class="list-horizontal-text flex-nowrap margin-top-7">
                     <li class="shrink-0" {{ dynamicRelativeTimeAttrs .PublishedAt }}></li>
+                    {{ if not .HideLinkHost }}
+                    <li class="min-width-0 text-truncate">{{ .LinkHost }}</li>
+                    {{ end }}
+                    {{ if not .HideChannelName }}
                     <li class="min-width-0 text-truncate">{{ .ChannelName }}</li>
+                    {{ end }}
+
                 </ul>
             </div>
         </div>
