Fix DNS summary tap highlight

--- a/internal/glance/static/css/utils.css
+++ b/internal/glance/static/css/utils.css
@@ -53,6 +53,10 @@
     display: none;
 }
 
+.summary:active {
+    -webkit-tap-highlight-color: transparent;
+}
+
 .details[open] .summary {
     margin-bottom: .8rem;
 }
