fix vertically scrollable nav

--- a/internal/glance/static/css/site.css
+++ b/internal/glance/static/css/site.css
@@ -281,6 +281,7 @@ kbd:active {
 
 .nav {
     overflow-x: auto;
+    overflow-y: hidden;
     min-width: 0;
     height: 100%;
     gap: var(--header-items-gap);
