--- a/internal/glance/templates/monitor.html
+++ b/internal/glance/templates/monitor.html
@@ -5,7 +5,7 @@
 <ul class="dynamic-columns list-gap-20 list-with-separator">
     {{ range .Sites }}
     {{ if and $.ShowFailingOnly (eq .StatusStyle "ok" ) }} {{ continue }} {{ end }}
-    <div class="monitor-site flex items-center gap-15">
+    <div class="monitor-site flex items-center gap-15 icon-parent">
         {{ template "site" . }}
     </div>
     {{ end }}
@@ -22,7 +22,7 @@
 
 {{ define "site" }}
 {{ if .Icon.URL }}
-<img class="monitor-site-icon{{ if .Icon.AutoInvert }} flat-icon{{ end }}" src="{{ .Icon.URL }}" alt="" loading="lazy">
+{{ .Icon.ElemWithClass "square-32" }}
 {{ end }}
 <div class="grow min-width-0">
     <a class="size-h3 color-highlight text-truncate block" href="{{ .URL | safeURL }}" {{ if not .SameTab }}target="_blank"{{ end }} rel="noreferrer">{{ .Title }}</a>
@@ -38,13 +38,13 @@
     </ul>
 </div>
 {{ if eq .StatusStyle "ok" }}
-<div class="monitor-site-status-icon">
+<div class="square-20 shrink-0 margin-left-auto">
     <svg fill="var(--color-positive)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M10 18a8 8 0 1 0 0-16 8 8 0 0 0 0 16Zm3.857-9.809a.75.75 0 0 0-1.214-.882l-3.483 4.79-1.88-1.88a.75.75 0 1 0-1.06 1.061l2.5 2.5a.75.75 0 0 0 1.137-.089l4-5.5Z" clip-rule="evenodd" />
     </svg>
 </div>
 {{ else }}
-<div class="monitor-site-status-icon">
+<div class="square-20 shrink-0 margin-left-auto">
     <svg fill="var(--color-negative)" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20">
         <path fill-rule="evenodd" d="M8.485 2.495c.673-1.167 2.357-1.167 3.03 0l6.28 10.875c.673 1.167-.17 2.625-1.516 2.625H3.72c-1.347 0-2.189-1.458-1.515-2.625L8.485 2.495ZM10 5a.75.75 0 0 1 .75.75v3.5a.75.75 0 0 1-1.5 0v-3.5A.75.75 0 0 1 10 5Zm0 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2Z" clip-rule="evenodd" />
     </svg>
