More icon tweaks

--- a/internal/glance/static/css/utils.css
+++ b/internal/glance/static/css/utils.css
@@ -378,10 +378,11 @@ details[open] .summary::after {
 
 .icon {
     object-fit: contain;
+    user-select: none;
 }
 
 .icon:not(.colored-icon) {
-    opacity: 0.8;
+    opacity: 0.85;
     filter: grayscale(0.2);
     transition: opacity 0.2s, filter 0.2s;
 }
