Add filters for rss and videos widgets

--- a/internal/glance/templates/videos-grid.html
+++ b/internal/glance/templates/videos-grid.html
@@ -1,8 +1,11 @@
 {{ template "widget-base.html" . }}
 
-{{ define "widget-content-classes" }}widget-content-frameless{{ end }}
+{{ define "widget-content-classes" }}{{ if not .Filters.AllFiltered }}widget-content-frameless{{ end }}{{ end }}
 
 {{ define "widget-content" }}
+{{ if .Filters.AllFiltered }}
+<p>No videos match the specified filters ({{ .Filters.FilteredCount }} filtered)</p>
+{{ else }}
 <div class="cards-grid collapsible-container" data-collapse-after-rows="{{ .CollapseAfterRows }}">
     {{ range .Videos }}
     <div class="card widget-content-frame thumbnail-parent">
@@ -10,4 +13,5 @@
     </div>
     {{ end }}
 </div>
+{{ end }}
 {{ end }}
