--- a/internal/glance/templates/videos.html
+++ b/internal/glance/templates/videos.html
@@ -1,8 +1,11 @@
 {{ template "widget-base.html" . }}
 
-{{ define "widget-content-classes" }}widget-content-frameless{{ end }}
+{{ define "widget-content-classes" }}{{ if not .Filters.AllFiltered }}widget-content-frameless{{ end }}{{ end }}
 
 {{ define "widget-content" }}
+{{ if .Filters.AllFiltered }}
+<p>No videos match the specified filters ({{ .Filters.FilteredCount }} filtered)</p>
+{{ else }}
 <div class="carousel-container">
     <div class="cards-horizontal carousel-items-container">
         {{ range .Videos }}
@@ -12,4 +15,5 @@
         {{ end }}
     </div>
 </div>
+{{ end }}
 {{ end }}
