Enhance todo widget functionality with storage type support and data path configuration

--- a/internal/glance/templates/todo.html
+++ b/internal/glance/templates/todo.html
@@ -1,5 +1,7 @@
-{{ template "widget-base.html" . }}
-
-{{ define "widget-content" }}
-<div class="todo" data-todo-id="{{ .TodoID }}"></div>
+{{ template "widget-base.html" . }} {{ define "widget-content" }}
+<div
+  class="todo"
+  data-todo-id="{{ .TodoID }}"
+  data-todo-storage-type="{{ .StorageType }}"
+></div>
 {{ end }}
